--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
-    "eslint": "8.0.0",
+    "eslint": "^8.40.0",
     "eslint-config-next": "11.1.2"
   }
 }
